# hello-world

./: .dockerignore  Dockerfile  nox.ini  noxfile.py  pyproject.toml  setup.cfg  tox.ini
hello_world/: serve.py
hello_world/templates/: base.html  footer.html  index.html  nav.html
tests/: test_hello_world.py
tests/functional/: test_favicon.py  test_hello_page.py  test_index.py
