[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Keeley Peacock <llamagrill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.761"
tox = "^3.14.3"
flake8 = "^3.7.9"
pylint = "^2.4.4"
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
