[tool.poetry]
name = "hello-world"
version = "0.2.3"
description = ""
authors = ["Keeley Peacock <llamagrill@gmail.com>", "Paul Peacock <pcp1976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
loguru = "^0.4.1"
waitress = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.761"
pylint = "^2.4.4"
coverage = "^5.0.3"
flake8 = {git = "https://gitlab.com/pycqa/flake8"}
bandit = "^1.6.2"
nox = "^2019.11.9"
pyhamcrest = "^2.0.2"
toml = "^0.10.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
